@@ -40,6 +40,7 @@
     </ul>
     <h1>h1's are cool</h1>
     <h2>h2's are cool</h2>
+    <h3>h3's are cool</h3>
   </div>
 </body>
 </html>
