@@ -23,6 +23,7 @@ class AccessorsTestDruid
   ordered_list(:top_five, :id => 'top')
   h1(:heading1, :id => 'main_heading')
   h2(:heading2, :id => 'main_heading')
+  h3(:heading3, :id => 'main_heading')
 end
 
 class BlockDruid
@@ -84,6 +85,9 @@ class BlockDruid
   end
   h2 :heading2 do |element|
     "h2"
+  end
+  h3 :heading3 do |element|
+    "h3"
   end
 end
 
@@ -603,6 +607,32 @@ describe Druid::Accessors do
       it "should retrieve the element from the page" do
         expect(driver).to receive(:h2).and_return(driver)
         expect(druid.heading2_element).to be_instance_of Druid::Elements::Heading
+      end
+    end
+  end
+
+  describe "h3 accessors" do
+    context "when called on a page object" do
+      it "should generate accessor methods" do
+        expect(druid).to respond_to(:heading3)
+        expect(druid).to respond_to(:heading3_element)
+      end
+
+      it "should call a block on the element method when present" do
+        expect(block_druid.heading3_element).to eql "h3"
+      end
+    end
+
+    context "implementation" do
+      it "should retrieve the text from the h3" do
+        expect(driver).to receive(:h3).and_return(driver)
+        expect(driver).to receive(:text).and_return("value")
+        expect(druid.heading3).to eql "value"
+      end
+
+      it "should retrieve the element from the page" do
+        expect(driver).to receive(:h3).and_return(driver)
+        expect(druid.heading3_element).to be_instance_of Druid::Elements::Heading
       end
     end
   end
