@@ -119,6 +119,12 @@ describe Druid::ElementLocators do
   it "should find a h2 element" do
     expect(driver).to receive(:h2).with(:id => 'blah').and_return(driver)
     element = page.h2_element(:id => 'blah')
-    expect(element.to be_instance_of Druid::Elements::Heading)
+    expect(element).to be_instance_of Druid::Elements::Heading
+  end
+
+  it "should find a h3 element" do
+    expect(driver).to receive(:h3).with(:id => 'blah').and_return(driver)
+    element = page.h3_element(:id => 'blah')
+    expect(element).to be_instance_of Druid::Elements::Heading
   end
 end
